[package]
name = "protocol_security_scanner"
version = "1.0.0"
authors = ["DevJourneyAR"]
edition = "2021"
license = "MIT"
description = "High-performance protocol security and vulnerability scanner built for SQRP standards."

[dependencies]
# For High-Performance Cryptography
ring = "0.17"
# For Secure Memory Handling
zeroize = "1.7"
# For Fast Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# High-speed timing and benchmarking
chrono = "0.4"
